--- a/h5client/src/Life/laya/pages/BuildingList.ui
+++ b/h5client/src/Life/laya/pages/BuildingList.ui
@@ -1,9 +1,9 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":6,
-    "selecteID":1,
-    "props":{"width":800,"var":"buildingBtn5","sceneColor":"#000000","label":"取消选择","height":30},
+    "selectedBox":1,
+    "selecteID":12,
+    "props":{"width":800,"var":"buildingBtn5","sceneColor":"#000000","label":"取消选择","height":60},
     "nodeParent":-1,
     "label":"View(buildingBtn5)",
     "isOpen":true,
@@ -196,6 +196,26 @@
                     "__InPool":false
                 }],
             "compId":11,
+            "child":[
+                ]
+        },
+        {
+            "x":15,
+            "type":"Button",
+            "props":{"y":35,"x":5,"var":"personBtn","skin":"comp/button.png","label":"人物"},
+            "nodeParent":1,
+            "label":"Button",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "frames":[
+                {
+                    "type":1,
+                    "props":{"y":54,"x":31,"skin":"comp/button.png","label":"label"},
+                    "frame":0,
+                    "__InPool":false
+                }],
+            "compId":12,
             "child":[
                 ]
         }],
